; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_main.c_block_signals.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_main.c_block_signals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGINT = common dso_local global i32 0, align 4
@SIGTERM = common dso_local global i32 0, align 4
@SIGHUP = common dso_local global i32 0, align 4
@SIGUSR1 = common dso_local global i32 0, align 4
@SIG_SETMASK = common dso_local global i32 0, align 4
@saved_sigset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @block_signals to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @block_signals() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @sigemptyset(i32* %1)
  %3 = load i32, i32* @SIGINT, align 4
  %4 = call i32 @sigaddset(i32* %1, i32 %3)
  %5 = load i32, i32* @SIGTERM, align 4
  %6 = call i32 @sigaddset(i32* %1, i32 %5)
  %7 = load i32, i32* @SIGHUP, align 4
  %8 = call i32 @sigaddset(i32* %1, i32 %7)
  %9 = load i32, i32* @SIGUSR1, align 4
  %10 = call i32 @sigaddset(i32* %1, i32 %9)
  %11 = load i32, i32* @SIG_SETMASK, align 4
  %12 = call i32 @pthread_sigmask(i32 %11, i32* %1, i32* @saved_sigset)
  ret void
}

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaddset(i32*, i32) #1

declare dso_local i32 @pthread_sigmask(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
